--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,12 @@ dependencies:
   path_provider:
   just_audio:
   pretty_dio_logger:
-  gallery_saver:
+#  gallery_saver:
   equatable:
   video_player:
-  video_thumbnail:
+#  video_thumbnail:
   permission_handler:
+  fluttertoast:
 
 dev_dependencies:
   flutter_test:
