--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
 #  video_thumbnail:
   permission_handler:
   fluttertoast:
+  cookie_jar: ^4.0.8
+  dio_cookie_manager: ^3.1.1
 
 dev_dependencies:
   flutter_test:
